test/errors/type/float/tostr.yasl
echo mt.lookup(0.0, .tostr)(1)
